# arduino-mcu-slave

./: .gitignore  CMakeLists.txt  README.md  toolchain.cmake
apps/: CMakeLists.txt
apps/blink/: main.cpp
apps/freertos-build-test/: main.cpp
apps/rtos_blink/: main.cpp
apps/test_encoder/: main.cpp
apps/test_motor_driver/: main.cpp
apps/test_motor_encoder/: main.cpp
apps/test_serial_and_motor/: main.cpp
apps/test_serial_com/: main.cpp
apps/test_serial_talker/: main.cpp
custom-lib/: CMakeLists.txt  motor_driver_scratch.cpp
custom-lib/motor-driver/: motor_driver.h
custom-lib/motor_driver/: motor_driver.cpp  motor_driver.h
custom-lib/robot-drivers/: constants.h  encoder.cpp  encoder.h  i2c.cpp  i2c.h  i2c_slave.cpp  i2c_slave.h  imu.cpp  imu.h  motor_driver.cpp  motor_driver.h  robot_drivers.h  serial_talker.cpp  serial_talker.h  ultrasonic.cpp  ultrasonic.h
custom-lib/test-lib/: blink_test.cpp  blink_test.h  rtos_blink_test.cpp  rtos_blink_test.h
freeRTOS/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_SAMD21.h  croutine.c.d  error_hooks.c  error_hooks.c.d  error_hooks.h  event_groups.c.d  heap_4bis.c.d  idle_hook.c  idle_hook.c.d  list.c.d  port.c.d  queue.c.d  tasks.c.d  timers.c.d
samd-core/: CMakeLists.txt
samd-core/cores/arduino/: WInterrupts.c  WInterrupts.h
